Fix env fallback image not showing

--- a/sass/_page-env.scss
+++ b/sass/_page-env.scss
@@ -209,6 +209,9 @@
     text-align: center;
     img {
         height: 100%;
+        position: absolute;
+        margin-left: -25%;
+        left: 50%;
     }
 }
 
